Fixes footer covering reloaded page's elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,11 @@ a {
   font-weight: bold;
 }
 
+#container {
+   min-height:100%;
+   position:relative;
+}
+
 .h6 {
   text-align: center;
 }
@@ -168,16 +173,20 @@ a {
 
 //Footer
 
-footer {
-  background-color: #69695d;
+.footer {
   position: fixed;
+  right: 0;
   bottom: 0;
+  left: 0;
+  padding: 1rem;
   width: 100%;
-  height: 6.5rem;
-  line-height: 6rem;
+  background-color: #69695d;
+  line-height: 2rem;
+  text-align: center;
 }
 
 .footer-text {
   color: #FFF;
   padding: 1em;
+  font-size: .75rem;
 }
